[gd_scene load_steps=4 format=3 uid="uid://ba7sute0gamiq"]

[ext_resource type="Script" path="res://Scripts/CharacterBody2D.gd" id="1_ehmgo"]
[ext_resource type="Texture2D" uid="uid://dpq1c8haqx30b" path="res://Sprites/Fred.png" id="2_bhijd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_beqr7"]
size = Vector2(32, 64)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ehmgo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_bhijd")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_beqr7")

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.2

[node name="dash_again_timer" type="Timer" parent="."]

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_again_timer" to="." method="_on_dash_again_timer_timeout"]
